# DSM

./: .gitignore  Makefile  README.md  tuto_ssh.txt
Phase1/: Makefile  basic.c  basic.h  common.c  common_impl.h  dsmexec.c  dsmwrap.c  machine_file
Phase2/: CMakeLists.txt  Makefile  common.c  common_impl.h  dsm.c  dsm.h  dsmexec.c  dsmwrap.c  exemple.c  machine_file  test.c  truc.c
